# thoe

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  config.h.in  daiopts.cpp  etypes.hpp  main.cpp  sattypes.hpp
src/dat/: thtk_bitstream.cpp
src/sys/: oserror.hpp  ospath.hpp
src/ui/: glfw.cpp  glfw.hpp  sdl.cpp  sdl.hpp  ui.hpp
